# sc1-mcc

./: .clang-format  .gitignore  .gitmodules  .mbedignore  CMakeLists.txt  Dockerfile  Makefile  PID.lib  README.md  bloop-dev  cleanup_script.sh  hold.sh  listen_for_job_end.sh  main.cpp  mbed_app.json  readser.sh
.github/workflows/: self-hosted.yaml
MCC Program/: README.md
MCC Program/include/: can.h  gpio.h
bloop-dev-tools/: attach-device-win.ps1
include/: README.md  analog.h  can.h  can_mcc.h  canmcc.h  common.h  concretemccstates.h  digital.h  drive.h  gpio.h  main.h  mc_status.h  mcc-monitor.h  mcc.h  mccstate.h  mccstateinterface.h  mccstatelist.h  mccstatemachine.h  monitor.h  motorError.h  motor_control.h  motor_error.h  speed.h  telemetry.h
monitors/: mcc-monitor.txt
src/: analog.cpp  can.cpp  can_mcc.cpp  canmcc.cpp  concretemccstates.cpp  digital.cpp  drive.cpp  gpio.cpp  mc_status.cpp  mcc-monitor.cpp  mcc.cpp  mccstatelist.cpp  mccstatemachine.cpp  monitor.cpp  motorError.cpp  motor_control.cpp  motor_error.cpp  speed.cpp
